--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   photo: ^0.1.11 #相册选取
   flutter_swiper : ^1.1.4 #轮播
   event_bus: ^1.0.3 #事件总线
+  flutter_cupertino_date_picker: ^0.3.0 #日期选择器
+  fluttertoast: ^3.0.1 #toast
 
 dev_dependencies:
   flutter_test:
