--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   flutter_swiper : ^1.1.4 #轮播
   event_bus: ^1.0.3 #事件总线
   flutter_cupertino_date_picker: ^0.3.0 #日期选择器
-  fluttertoast: ^3.0.1 #toast
+#  fluttertoast: ^3.0.1 #toast
+  toast: ^0.1.3
 
 dev_dependencies:
   flutter_test:
