--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_cupertino_date_picker: ^0.3.0 #日期选择器
 #  fluttertoast: ^3.0.1 #toast
   toast: ^0.1.3
+  shared_preferences: ^0.4.3 #共享参数
 
 dev_dependencies:
   flutter_test:
