--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 #  fluttertoast: ^3.0.1 #toast
   toast: ^0.1.3
   shared_preferences: ^0.4.3 #共享参数
+  sqflite: ^1.1.0 #数据库
 
 dev_dependencies:
   flutter_test:
