--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   dio: ^1.0.13 #网络请求
   json_annotation: ^2.0.0 #json序列化
   flutter_webview_plugin: ^0.3.0+2 #webView插件
-  cached_network_image: ^0.5.1 # 占位图片
+#  cached_network_image: ^0.5.1 # 占位图片
   carousel_slider: ^1.0.1 #轮播图
   photo: ^0.1.11 #相册选取
   flutter_swiper : ^1.1.4 #轮播
